Changed Img Links within CSS and HTMl

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Game Station</title>
-  <link rel="shortcut icon" type="image/png" href="logo.png">
+  <link rel="shortcut icon" type="image/png" href="assets/img/logo.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Tomorrow:400,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,700&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 </nav>
 
 <section class="homepage-background">
-  <img src="logo-a.png">
+  <img src="assets/img/logo-a.png">
 	<h4 class="mb-5">Drop in. Start up. Game on.</h4>
 
 <a href="#booking" class="btn btn-gsprimary">Press Start</a>
@@ -61,13 +61,13 @@
 <section id="gallery">
   <h3>A peek inside the van</h3>
   <div class="row">
-  <div class="col-md-3"><img src="van2.jpg"></div>
-  <div class="col-md-6"><img src="van1.jpg"></div>
-  <div class="col-md-3"><img src="inside7.jpg"></div>
-  <div class="col-md-3"><img src="inside4.jpg"></div>
-  <div class="col-md-3"><img src="inside2.jpg"></div>
-  <div class="col-md-3"><img src="inside3.jpg"></div>
-  <div class="col-md-3"><img src="inside1.jpg"></div>
+  <div class="col-md-3"><img src="assets/img/van2.jpg"></div>
+  <div class="col-md-6"><img src="assets/img/van1.jpg"></div>
+  <div class="col-md-3"><img src="assets/img/inside7.jpg"></div>
+  <div class="col-md-3"><img src="assets/img/inside4.jpg"></div>
+  <div class="col-md-3"><img src="assets/img/inside2.jpg"></div>
+  <div class="col-md-3"><img src="assets/img/inside3.jpg"></div>
+  <div class="col-md-3"><img src="assets/img/inside1.jpg"></div>
 </div>
 </section>
 
