removed form, added meet the owners section (unfinished) and tidied code up

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#whatIs">About</a>
+      <a class="nav-item nav-link" href="#about">About</a>
       <a class="nav-item nav-link" href="#gallery">Gallery</a>
       <a class="nav-item nav-link" href="#contact">Contact</a>
       </div>
@@ -34,10 +34,10 @@
   <img src="assets/img/logo-a.png">
 	<h4 class="mb-5">Drop in. Start up. Game on.</h4>
 
-<a href="#booking" class="btn btn-gsprimary">Press Start</a>
+<a href="#about" class="btn btn-gsprimary">Press Start</a>
 </section>
 
-<section id="whatIs">
+<section id="about">
 	<h3>What is TheGameStation?</h3>
   <div class="row">
     <div class="col-md p-4">
@@ -71,34 +71,33 @@
 </div>
 </section>
 
-<section id="booking">
-<h3>Get in touch</h3>
+<section id="meet-owners">
+<h3>Meet The Owners</h3>
 
-<form class="col-md-4 offset-md-4">
-  <div class="form-group">
-    <input type="text" class="form-control" id="exampleInputName" placeholder="Name">
+<div class="row">
+  <div class="col-md-3 offset-md-2"><img src="https://placekitten.com/200/200" alt="">
+  <h3>James</h3>
+  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
   </div>
-  <div class="form-group">
-    <input type="email" class="form-control" id="exampleInputEmail" placeholder="Email">
-  </div>
-  <div class="form-group">
-    <textarea type="text" class="form-control" id="exampleInputMessage" placeholder="Message"></textarea>
-  </div>
-  <button type="submit" class="btn btn-gsprimary full-width">Send</button>
-</form>
+  <div class="col-md-3 offset-md-2"><img src="https://placekitten.com/200/200" alt="">
+  <h3>Jamie</h3>
+  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+</div>
+</div>
 
 </section>
 
 <section id="contact">
+  <p>thegamestationguys@hotmail.com</p>
+
   <div class="row">
-    <div class="col-md p-4">
-  <a href="https://www.facebook.com/TheGameStationLTD"><i class="fab fa-facebook-f fa-2x"></i></a>
-  <a href="https://twitter.com/TGS_Norwich"><i class="fab fa-twitter fa-2x"></i></a>
-  <a href="https://www.instagram.com/thegamestation_norwich/"><i class="fab fa-instagram fa-2x"></i></a>
+    <div class="col-md-2 offset-3"><a href="https://www.facebook.com/TheGameStationLTD"><i class="fab fa-facebook-f fa-2x"></i></a></div>
+    <div class="col-md-2"><a href="https://twitter.com/TGS_Norwich"><i class="fab fa-twitter fa-2x"></i></a></div>
+    <div class="col-md-2"><a href="https://www.instagram.com/thegamestation_norwich/"><i class="fab fa-instagram fa-2x"></i></a></div> 
 </div>
 </div>
 
-<p class="copyright">© TheGameStation LTD</p>
+<p>© TheGameStation LTD</p>
 </section>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.js" integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
