cleaned code and updated footer

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>TheGameStation</title>
   <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Tomorrow:400,700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Tomorrow:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="gamestation.css">
 </head>
@@ -43,29 +43,25 @@
 <section id="about">
 <h3>What is TheGameStation?</h3>
   <div class="row">
-    <div class="features">
-      <div class="col-md p-4">
-        <i class="fas fa-gamepad fa-3x"></i>
-          <h4>Play</h4>
-            <p>Our ever-expanding games library includes titles of new and old. With consoles such as Xbox One, Nintendo Switch, Oculus Rift and several mini consoles.</p>
+    <div class="col-md p-4">
+      <i class="fas fa-gamepad fa-3x"></i>
+      <h4>Play</h4>
+      <p>Our ever-expanding games library includes titles of new and old. With consoles such as Xbox One, Nintendo Switch,
+        Oculus Rift and several mini consoles.</p>
     </div>
-  </div>
-
-    <div class="features">
-      <div class="col-md p-4">
-        <i class="fas fa-birthday-cake fa-3x"></i>
-          <h4>Options</h4>
-            <p>We will host a range of different events such as birthday parties, stag dos, corporate, weddings - you name it!</p>
+  
+    <div class="col-md p-4">
+      <i class="fas fa-birthday-cake fa-3x"></i>
+      <h4>Options</h4>
+      <p>We will host a range of different events such as birthday parties, stag dos, corporate, weddings - you name it!
+      </p>
     </div>
-  </div>
-
-    <div class="features">
-      <div class="col-md p-4">
-        <i class="fas fa-map fa-3x"></i>
-          <h4>Location</h4>
-            <p>We travel all across Norfolk to bring you our unique services.</p>
+  
+    <div class="col-md p-4">
+      <i class="fas fa-map fa-3x"></i>
+      <h4>Location</h4>
+      <p>We travel all across Norfolk to bring you our unique services.</p>
     </div>
-  </div>
 </div>
 </section>
 
@@ -73,16 +69,6 @@
 
 <section id="gallery">
   <h3>A peek inside the van</h3>
-  <!-- <div class="row">
-  <div class="col-md-3"><img src="assets/img/van2.jpg"></div>
-  <div class="col-md-6"><img src="assets/img/van1.jpg"></div>
-  <div class="col-md-3"><img src="assets/img/inside7.jpg"></div>
-  <div class="col-md-3"><img src="assets/img/inside4.jpg"></div>
-  <div class="col-md-3"><img src="assets/img/inside2.jpg"></div>
-  <div class="col-md-3"><img src="assets/img/inside3.jpg"></div>
-  <div class="col-md-3"><img src="assets/img/inside1.jpg"></div>
-</div> -->
-
 <div class="grid">
   <div class="item" style="background-image: url(assets/img/inside1.jpg)"></div>
   <div class="item" style="background-image: url(assets/img/van1.jpg)"></div>
@@ -148,24 +134,27 @@
 <footer id="footer">
 
   <div class="row">
-    <div class="col-1-of-2">
-        <ul class="contact">
-          <p>Contact us:</p>
-          <li><i class="fas fa-envelope"></i><span>thegamestationguys@hotmail.com</span></li>
-          <li><i class="fas fa-phone"></i><span>07777777777</span></li>
-    </div>
-  
-</ul>
-
-    <div class="col-1-of-2">
+    <div class="col-1-of-2 offset-md-4">
+      <p>Connect with us:</p>
       <ul class="social">
-        <p>Connect with us:</p>
         <li><a href="https://www.facebook.com/TheGameStationLTD"><i class="fab fa-facebook-f fa-2x"></i></a></li>
         <li><a href="https://twitter.com/TGS_Norwich"><i class="fab fa-twitter fa-2x"></i></a></li>
         <li><a href="https://www.instagram.com/thegamestation_norwich/"><i class="fab fa-instagram fa-2x"></i></a></li>
+      </ul>
+    </div>
+
+
+    <div class="col-1-of-2">
+
+      <p>Contact us:</p>
+      <ul class="contact">
+        <li><i class="fas fa-envelope"></i><span>thegamestationguys@hotmail.com</span></li>
+        <li><i class="fas fa-phone"></i><span>07777777777</span></li>
     </ul>
   </div>
-</div>
+
+      
+  </div>
 
 <div class="footer-content">&copy; 2020 TheGameStation LTD</div>
 </footer>
