minor updates to code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section id="home">
     <div class="background">
-    <img src="assets/img/logo.png">
+    <img class="logo" src="assets/img/logo.png">
     <h4 class="mb-5 mt-3">Drop in. Start up. Game on.</h4>
     <a href="#about" class="btn btn-gsprimary">Press Start</a>
   </div>
@@ -45,7 +45,7 @@
   <!-- ABOUT -->
 
   <section id="about">
-    <h3>What is TheGameStation?</h3>
+    <h1>What is TheGameStation?</h1>
     <div class="row">
       <div class="col-md p-4">
         <i class="fas fa-gamepad fa-3x"></i>
@@ -73,24 +73,32 @@
   <!-- GALLERY -->
 
   <section id="gallery">
-    <h3>A peek inside the van</h3>
-    <div class="grid">
+    <h1>A peek inside the van</h1>
+    <!-- <div class="grid">
       <div class="item" style="background-image: url(assets/img/inside1.jpg)"></div>
       <div class="item" style="background-image: url(assets/img/van1.jpg)"></div>
       <div class="item" style="background-image: url(assets/img/inside2.jpg)"></div>
       <div class="item" style="background-image: url(assets/img/inside3.jpg)"></div>
       <div class="item" style="background-image: url(assets/img/van3.jpg)"></div>
-    </div>
+    </div> -->
+
+    <section id="photos">
+      <img src="assets/img/inside1.jpg" alt="">
+      <img src="assets/img/van1.jpg" alt="">
+      <img src="assets/img/inside2.jpg" alt="">
+      <img src="assets/img/inside3.jpg" alt="">
+      <img src="assets/img/van3.jpg" alt="">
+    </section>
   </section>
 
   <!-- MEET THE TEAM -->
 
   <section id="team">
-    <h3>Meet The Owners</h3>
+    <h1>Meet The Owners</h1>
 
     <div class="row">
       <div class="col-md-3 offset-md-2"><img src="https://placekitten.com/200/200" alt="">
-        <h3>James</h3>
+        <h1>James</h1>
         <ul>
           <li><span>Favourite game:</span> Final Fantasy 7</li>
           <li><span>First console:</span> Sega Megadrive</li>
@@ -101,7 +109,7 @@
         </ul>
       </div>
       <div class="col-md-3 offset-md-2"><img src="https://placekitten.com/200/200" alt="">
-        <h3>Jamie</h3>
+        <h1>Jamie</h1>
         <ul>
             <li><span>Favourite game:</span> Super Metroid</li>
             <li><span>First console:</span> Sega Megadrive</li>
