--- a/index.html
+++ b/index.html
@@ -1,144 +1,124 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TheGameStation</title>
-  <link rel="shortcut icon" type="image/png" href="assets/img/logo.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Tomorrow:400,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="assets/img/thegamestation-logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Tomorrow:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
+    <title>TheGameStation</title>
 </head>
 
 <body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="mx-auto d-flex">
-      <a class="navbar-brand" href="#">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#home">Home</a>
-            <a class="nav-item nav-link" href="#about">About</a>
-            <a class="nav-item nav-link" href="#gallery">Gallery</a>
-            <a class="nav-item nav-link" href="#team">Team</a>
-            <a class="nav-item nav-link" href="#footer">Contact</a>
-          </div>
-        </div>
-    </div>
-  </nav>
-
-  <section id="home">
-    <div class="background">
-    <img class="logo" src="assets/img/logo.png">
-    <h4 class="mb-5 mt-3">Drop in. Start up. Game on.</h4>
-    <a href="#about" class="btn btn-gsprimary">Press Start</a>
-  </div>
-  </section>
-
-  <!-- ABOUT -->
-
-  <section id="about">
-    <h1>What is TheGameStation?</h1>
-    <div class="row">
-      <div class="col-md p-4">
-        <i class="fas fa-gamepad fa-3x"></i>
-        <h4>Play</h4>
-        <p>Our ever-expanding games library includes titles of new and old across consoles such as Xbox One, Nintendo
-          Switch,
-          Oculus Rift and several mini consoles.</p>
-      </div>
-
-      <div class="col-md p-4">
-        <i class="fas fa-birthday-cake fa-3x"></i>
-        <h4>Options</h4>
-        <p>We host a range of different events such as birthday parties, stag dos, corporate, weddings - you name it!
-        </p>
-      </div>
-
-      <div class="col-md p-4">
-        <i class="fas fa-map fa-3x"></i>
-        <h4>Location</h4>
-        <p>We travel all across Norfolk to bring you our unique services.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- GALLERY -->
-
-  <section id="gallery">
-    <h1>A peek inside the van</h1>
-    <!-- <div class="grid">
-      <div class="item" style="background-image: url(assets/img/inside1.jpg)"></div>
-      <div class="item" style="background-image: url(assets/img/van1.jpg)"></div>
-      <div class="item" style="background-image: url(assets/img/inside2.jpg)"></div>
-      <div class="item" style="background-image: url(assets/img/inside3.jpg)"></div>
-      <div class="item" style="background-image: url(assets/img/van3.jpg)"></div>
-    </div> -->
-
-    <section id="photos">
-      <img src="assets/img/inside1.jpg" alt="">
-      <img src="assets/img/van1.jpg" alt="">
-      <img src="assets/img/inside2.jpg" alt="">
-      <img src="assets/img/inside3.jpg" alt="">
-      <img src="assets/img/van3.jpg" alt="">
-    </section>
-  </section>
-
-  <!-- MEET THE TEAM -->
-
-  <section id="team">
-    <h1>Meet The Owners</h1>
-
-    <div class="row">
-      <div class="col-md-3 offset-md-2"><img src="https://placekitten.com/200/200" alt="">
-        <h1>James</h1>
-        <ul>
-          <li><span>Favourite game:</span> Final Fantasy 7</li>
-          <li><span>First console:</span> Sega Megadrive</li>
-          <li><span>Favourite Xbox character:</span> Ori</li>
-          <li><span>Favourite PlayStation character:</span> Lara Croft</li>
-          <li><span>Favourite Nintendo character:</span> Pikachu</li>
-          <li><span>Favourite genre:</span> RPGs</li>
-        </ul>
-      </div>
-      <div class="col-md-3 offset-md-2"><img src="https://placekitten.com/200/200" alt="">
-        <h1>Jamie</h1>
-        <ul>
-            <li><span>Favourite game:</span> Super Metroid</li>
-            <li><span>First console:</span> Sega Megadrive</li>
-            <li><span>Favourite Xbox character:</span> Ori</li>
-            <li><span>Favourite PlayStation character:</span> Kratos</li>
-            <li><span>Favourite Nintendo character:</span> Link</li>
-            <li><span>Favourite genre:</span> Platformers</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-
-  <footer id="footer">
-    <p class="email">Let's talk! <a href="mailto:thegamestationguys@hotmail.com">thegamestationguys@hotmail.com</a></p>
-    <ul class="social">
-      <li><a href="https://www.facebook.com/TheGameStationLTD"><i class="fab fa-facebook-f fa-2x"></i></a></li>
-      <li><a href="https://twitter.com/TGS_Norwich"><i class="fab fa-twitter fa-2x"></i></a></li>
-      <li><a href="https://www.instagram.com/thegamestation_norwich/"><i class="fab fa-instagram fa-2x"></i></a></li>
+<button class="nav-toggle" type="button"><i class="fas fa-bars"></i></button>
+<navbar class="nav">
+    <div class="nav-content">
+    <ul class="nav-list">
+        <li><a href="#header" class="nav-links">Home</a></li>
+        <li><a href="#about" class="nav-links">About</a></li>
+        <li><a href="#gallery" class="nav-links">Gallery</a></li>
+        <li><a href="#team" class="nav-links">Team</a></li>
+        <li><a href="#footer" class="nav-links">Contact</a></li>
     </ul>
-    <p class="copyright">&copy; Copyright 2020 | TheGameStation LTD.</p>
-  </footer>
+    <div class="nav-social">
+        <a href="https://www.facebook.com/TheGameStationLTD"><i class="fab fa-facebook-f fa-nav-f"></i></a>
+        <a href="https://twitter.com/TGS_Norwich"><i class="fab fa-twitter fa-nav-t"></i></a>
+        <a href="https://www.instagram.com/thegamestation_norwich/"><i class="fab fa-instagram fa-nav-i"></i></a>
+    </div>
+</div>
+</navbar>
 
-  <!-- SCRIPTS -->
+    <section id="header">
+        <img class="logo" src="assets/img/thegamestation-logo.png" alt="logo">
+        <h2>Drop in. Start up. Game on.</h2>
+        <a href="#about"><button type="button" class="start-button">Press Start</button></a>
+    </section>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.js" integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="assets/js/gameStation.js"></script>
+
+    <section id="about">
+        <h1>What is TheGameStation?</h1>
+        <div class="flex-container">
+
+            <div class="flex-item"><i class="fas fa-gamepad fa-3x"></i>
+                <h3>Play</h3>
+                <p>Our ever-expanding games library includes titles of new and old across consoles such as Xbox One,
+                    Nintendo Switch, Oculus Rift and several mini consoles.</p>
+            </div>
+
+            <div class="flex-item"><i class="fas fa-birthday-cake fa-3x"></i>
+                <h3>Options</h3>
+                <p>We host a range of different events such as birthday parties, stag dos, corporate, weddings - you
+                    name it!</p>
+            </div>
+
+            <div class="flex-item"><i class="fas fa-map fa-3x"></i>
+                <h3>Location</h3>
+                <p>We travel all across Norfolk to bring you our unique services.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="gallery">
+        <h1>A peak inside the van</h1>
+        <div class="container">
+            <img src="assets/img/inside-gaming-van-1.jpg" alt="">
+            <img src="assets/img/inside-gaming-van-3.jpg" alt="">
+            <img src="assets/img/inside-gaming-van-2.jpg" alt="">
+            <img src="assets/img/gaming-van.jpg" alt="">
+            <img src="assets/img/gaming-van-logo.jpg" alt="">
+          </div>
+    </section>
+
+
+    <section id="team">
+        <h1>Meet the owners</h1>
+        <div class="flex-container">
+            <div class="flex-item">
+                <img src="assets/img/placeholder.jpg" alt="placeholder">
+                <h1>James</h1>
+                <ul>
+                    <li><span>Favourite game:</span> Final Fantasy 7</li>
+                    <li><span>First console:</span> Sega Megadrive</li>
+                    <li><span>Favourite Xbox character:</span> Ori</li>
+                    <li><span>Favourite PlayStation character:</span> Lara Croft</li>
+                    <li><span>Favourite Nintendo character:</span> Pikachu</li>
+                    <li><span>Favourite genre:</span> RPGs</li>
+                  </ul>
+            </div>
+
+            <div class="flex-item">
+                <img src="assets/img/placeholder.jpg" alt="placeholder">
+                <h1>Jamie</h1>
+                <ul>
+                    <li><span>Favourite game:</span> Super Metroid</li>
+                    <li><span>First console:</span> Sega Megadrive</li>
+                    <li><span>Favourite Xbox character:</span> Ori</li>
+                    <li><span>Favourite PlayStation character:</span> Kratos</li>
+                    <li><span>Favourite Nintendo character:</span> Link</li>
+                    <li><span>Favourite genre:</span> Platformers</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="footer">
+        <p class="email">Get in touch! <a href="mailto:thegamestationguys@hotmail.com">TheGameStationGuys@hotmail.com</a>
+        </p>
+        <div class="footer-social">
+        <a href="https://www.facebook.com/TheGameStationLTD"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/TGS_Norwich"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/thegamestation_norwich/"><i class="fab fa-instagram"></i></a>
+    </div>
+        <p class="copyright">&copy; Copyright 2020 | TheGameStation LTD.</p>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/js/gameStation.js"></script>
 </body>
 
 </html>
