--- a/index.html
+++ b/index.html
@@ -3,122 +3,122 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="assets/img/thegamestation-logo.png">
+    <link rel="shortcut icon" type="image/png" href="assets/img/company-logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Tomorrow:wght@400;700&display=swap"
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Tomorrow:wght@300;400;500;700&display=swap"
         rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-    <title>TheGameStation</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
+    <title>TheGameStation | Mobile Gaming Arcade</title>
 </head>
 
 <body>
-<button class="nav-toggle" type="button"><i class="fas fa-bars"></i></button>
-<navbar class="nav">
-    <div class="nav-content">
-    <ul class="nav-list">
-        <li><a href="#header" class="nav-links">Home</a></li>
-        <li><a href="#about" class="nav-links">About</a></li>
-        <li><a href="#gallery" class="nav-links">Gallery</a></li>
-        <li><a href="#team" class="nav-links">Team</a></li>
-        <li><a href="#footer" class="nav-links">Contact</a></li>
-    </ul>
-    <div class="nav-social">
-        <a href="https://www.facebook.com/TheGameStationLTD"><i class="fab fa-facebook-f fa-nav-f"></i></a>
-        <a href="https://twitter.com/TGS_Norwich"><i class="fab fa-twitter fa-nav-t"></i></a>
-        <a href="https://www.instagram.com/thegamestation_norwich/"><i class="fab fa-instagram fa-nav-i"></i></a>
-    </div>
-</div>
-</navbar>
-
-    <section id="header">
-        <img class="logo" src="assets/img/thegamestation-logo.png" alt="logo">
+    <section class="header">
+        <img class="logo" src="assets/img/company-logo.png" alt="logo">
         <h2>Drop in. Start up. Game on.</h2>
         <a href="#about"><button type="button" class="start-button">Press Start</button></a>
     </section>
 
+    <h1 id="about">What is TheGameStation?</h1>
 
-    <section id="about">
-        <h1>What is TheGameStation?</h1>
-        <div class="flex-container">
+    <section class="about">
+        <img class="van" src="assets/img/van3.jpg" alt="van">
+        <div class="text-box">
+            <p><span>TheGameStation</span> is a mobile gaming arcade that hosts events at your chosen location offering
+                an immersive
+                experience with the latest consoles and games. </p>
+        </div>
+    </section>
 
-            <div class="flex-item"><i class="fas fa-gamepad fa-3x"></i>
+    <section class="features">
+        <div class="feature-container">
+
+            <div class="feature-item"><i class="fas fa-gamepad fa-3x"></i>
                 <h3>Play</h3>
-                <p>Our ever-expanding games library includes titles of new and old across consoles such as Xbox One,
-                    Nintendo Switch, Oculus Rift and several mini consoles.</p>
+                <p>Our ever-expanding games library includes titles of new and old across the latest and retro consoles.
+                </p>
             </div>
 
-            <div class="flex-item"><i class="fas fa-birthday-cake fa-3x"></i>
+            <div class="feature-item"><i class="fas fa-birthday-cake fa-3x"></i>
                 <h3>Options</h3>
                 <p>We host a range of different events such as birthday parties, stag dos, corporate, weddings - you
                     name it!</p>
             </div>
 
-            <div class="flex-item"><i class="fas fa-map fa-3x"></i>
+            <div class="feature-item"><i class="fas fa-map fa-3x"></i>
                 <h3>Location</h3>
-                <p>We travel all across Norfolk to bring you our unique services.</p>
+                <p>We travel all across Norfolk to bringing the party and our unique services to you.</p>
             </div>
         </div>
     </section>
 
 
-    <section id="gallery">
+    <section class="gallery">
         <h1>A peak inside the van</h1>
-        <div class="container">
+        <div class="gallery-container">
             <img src="assets/img/inside-gaming-van-1.jpg" alt="">
             <img src="assets/img/inside-gaming-van-3.jpg" alt="">
             <img src="assets/img/inside-gaming-van-2.jpg" alt="">
-            <img src="assets/img/gaming-van.jpg" alt="">
-            <img src="assets/img/gaming-van-logo.jpg" alt="">
-          </div>
-    </section>
-
-
-    <section id="team">
-        <h1>Meet the owners</h1>
-        <div class="flex-container">
-            <div class="flex-item">
-                <img src="assets/img/placeholder.jpg" alt="placeholder">
-                <h1>James</h1>
-                <ul>
-                    <li><span>Favourite game:</span> Final Fantasy 7</li>
-                    <li><span>First console:</span> Sega Megadrive</li>
-                    <li><span>Favourite Xbox character:</span> Ori</li>
-                    <li><span>Favourite PlayStation character:</span> Lara Croft</li>
-                    <li><span>Favourite Nintendo character:</span> Pikachu</li>
-                    <li><span>Favourite genre:</span> RPGs</li>
-                  </ul>
-            </div>
-
-            <div class="flex-item">
-                <img src="assets/img/placeholder.jpg" alt="placeholder">
-                <h1>Jamie</h1>
-                <ul>
-                    <li><span>Favourite game:</span> Super Metroid</li>
-                    <li><span>First console:</span> Sega Megadrive</li>
-                    <li><span>Favourite Xbox character:</span> Ori</li>
-                    <li><span>Favourite PlayStation character:</span> Kratos</li>
-                    <li><span>Favourite Nintendo character:</span> Link</li>
-                    <li><span>Favourite genre:</span> Platformers</li>
-                </ul>
-            </div>
         </div>
     </section>
 
 
-    <section id="footer">
-        <p class="email">Get in touch! <a href="mailto:thegamestationguys@hotmail.com">TheGameStationGuys@hotmail.com</a>
-        </p>
-        <div class="footer-social">
-        <a href="https://www.facebook.com/TheGameStationLTD"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/TGS_Norwich"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/thegamestation_norwich/"><i class="fab fa-instagram"></i></a>
-    </div>
-        <p class="copyright">&copy; Copyright 2020 | TheGameStation LTD.</p>
+    <section class="owners">
+
+        <h1>Meet the owners</h1>
+
+        <div class="members">
+            <div class="unit">
+                <img
+                    src="https://static3.depositphotos.com/1000992/133/i/600/depositphotos_1337508-stock-photo-a-free-flying-white-dove.jpg">
+                <div class="more">
+                    <h3 class="team-title">James</h3>
+                    <p class="team-bio">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <ul>
+                        <li><span>Favourite Game:</span> Final Fantasy 7</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="unit">
+                <img
+                    src="https://static3.depositphotos.com/1000992/133/i/600/depositphotos_1337508-stock-photo-a-free-flying-white-dove.jpg">
+                <div class="more2">
+                    <h3 class="team-title">Jamie</h3>
+                    <p class="team-bio">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <ul>
+                        <li><span>Favourite Game:</span> Super Metroid</li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </section>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/js/gameStation.js"></script>
+    <div class="footer">
+        <img class="footer-logo" src="assets/img/company-logo.png" alt="logo">
+
+        <p class="booking">Get in touch with us and book now!</p>
+        <div class="contact">
+            <p class="phone">Phone: 07777 777777</p>
+            <p class="email">Email: <a href="mailto:thegamestationguys@hotmail.com"
+                    target="_blank">TheGameStationGuys@hotmail.com</a></p>
+        </div>
+
+        <div class="footer-social">
+            <a href="https://www.facebook.com/TheGameStationLTD" target="_blank"><i
+                    class="fab fa-facebook-f fa-footer-f"></i></a>
+            <a href="https://twitter.com/TGS_Norwich" target="_blank"><i class="fab fa-twitter fa-footer-t"></i></a>
+            <a href="https://www.instagram.com/thegamestation_norwich/" target="_blank"><i
+                    class="fab fa-instagram fa-footer-i"></i></a>
+        </div>
+
+        <p class="copyright">&copy; 2021 TheGameStation. Website by <a href="https://wwilsonnorth.github.io/"
+                target="_blank">Will</a></p>
+    </div>
 </body>
 
 </html>
