fixed media queries

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1 id="about">What is TheGameStation?</h1>
 
     <section class="about">
-        <img class="van" src="assets/img/van3.jpg" alt="van">
+        <img class="van" src="assets/img/gaming-van.jpg" alt="van">
         <div class="text-box">
             <p><span>TheGameStation</span> is a mobile gaming arcade that hosts events at your chosen location offering
                 an immersive
